--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -25,7 +25,7 @@
 <!-- card -->
     <div id="photo" class="card-body bg-dark text-white" style="margin: auto; width:500px; height:auto; background-image: url(../assets/bg_project.jpg); background-size: cover;">
       	<div class="text-center">
-      		<label for="lblUpload"><img src="../assets/mod_hau.jpg" alt="Post a Pic" width="150" ></label>
+      		<label for="lblUpload"><img src="../assets/logo.png" alt="Post a Pic" width="150" ></label>
       		<input style="visibility: hidden;" type="file" id="lblUpload" name="file" accept="image/*">
     	</div>
 	      <div>
