--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -23,7 +23,7 @@
 		<h1>Skyrians Card Generator</h1>
 	</div>
 <!-- card -->
-    <div id="photo" class="card-body bg-dark text-white" style="margin: auto; width:500px; height:auto; background-image: url(../assets/bg_project.jpg); background-size: cover;">
+    <div id="photo" class="col-md-4 card-body bg-dark text-white" style="margin: auto; height:auto; background-image: url(../assets/bg_project.jpg); background-size: cover;">
       	<div class="text-center">
       		<label for="lblUpload" style="margin:auto;"><img src="../assets/logo.png" alt="Post a Pic" width="150" ></label>
       		<input style="visibility: hidden;" type="file" id="lblUpload" name="file" accept="image/*">
