--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -20,7 +20,7 @@
 <body>
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-md-5 text-center" style="margin: auto;">
+		<div class="col-md-12 text-center" style="margin: auto;">
 			<h1>Skyrians Card Generator</h1>
 		</div>
 	</div>
@@ -29,7 +29,7 @@
 
 <!-- card -->
 	<div class="row">
-		<div class="col-md-5" style="margin: auto;">
+		<div class="col-lg-5 col-md-12" style="margin: auto;">
 			<div class="Card bg-dark text-white text-center" id="photo" style="background-image: url(../assets/bg_project.jpg); background-size: cover;">
 			    
 			    <br/>
@@ -129,7 +129,7 @@
 	</div>
 	
 	<div class="row">
-		<div class="col-md-5 text-center" style="margin: auto;">
+		<div class="col-md-12 text-center" style="margin: auto;">
 			<h2>Screenshot:</h2>
 			<div id="output"></div>
 			<button onclick="canvasDownload()" type="button" class="btn btn-success">Download</button>
