--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -29,7 +29,7 @@
 
 <!-- card -->
 	<div class="row">
-		<div class="col-lg-5 col-md-10" style="margin: auto;">
+		<div class="col-lg-5 col-md-8" style="margin: auto;">
 			<div class="Card bg-dark text-white text-center" id="photo" style="background-image: url(../assets/bg_project.jpg); background-size: cover;">
 			    
 			    <br/>
@@ -53,45 +53,41 @@
 					<p class="small" contenteditable="true">At Hidden Forest A Dacade Ago</p>
 
 					<p class="p-flat"><strong>Favorite Realm</strong></p>
-					<div class="col-md-12">
-					  <div class="row">
-					  		<div class="col-md-2 text-center no-padding">
-					  			<img id="isle" src="../assets/gate/isle_b.png" alt="isle_b" class="img-responsive" width="100%" onclick="changeImageGate('isle')">
-					  		</div>
-					  		<div class="col-md-2 text-center no-padding">
-					  			<img id="prairie" src="../assets/gate/prairie_b.png" alt="prairie_b" class="img-responsive" width="100%" onclick="changeImageGate('prairie')">
-					  		</div>
-					  		<div class="col-md-2 text-center no-padding">
-					  			<img id="forest" src="../assets/gate/forest_b.png" alt="forest_b" class="img-responsive" width="100%" onclick="changeImageGate('forest')">
-					  		</div>
-					  		<div class="col-md-2 text-center no-padding">
-					  			<img id="valley" src="../assets/gate/valley_b.png" alt="valley_b" class="img-responsive" width="100%" onclick="changeImageGate('valley')">
-					  		</div>
-					  		<div class="col-md-2 text-center no-padding">
-					  			<img id="waste" src="../assets/gate/waste_b.png" alt="waste_b" class="img-responsive" width="100%" onclick="changeImageGate('waste')">
-					  		</div>
-					  		<div class="col-md-2 text-center no-padding">
-					  			<img id="vault" src="../assets/gate/vault_b.png" alt="vault_b" class="img-responsive" width="100%" onclick="changeImageGate('vault')">
-					  		</div>
-					  </div>
+					<div class="row" style="margin-bottom: 1rem;">
+				  		<div class="col-md-2 text-center no-padding">
+				  			<img id="isle" src="../assets/gate/isle_b.png" alt="isle_b" class="img-responsive" width="100%" onclick="changeImageGate('isle')">
+				  		</div>
+				  		<div class="col-md-2 text-center no-padding">
+				  			<img id="prairie" src="../assets/gate/prairie_b.png" alt="prairie_b" class="img-responsive" width="100%" onclick="changeImageGate('prairie')">
+				  		</div>
+				  		<div class="col-md-2 text-center no-padding">
+				  			<img id="forest" src="../assets/gate/forest_b.png" alt="forest_b" class="img-responsive" width="100%" onclick="changeImageGate('forest')">
+				  		</div>
+				  		<div class="col-md-2 text-center no-padding">
+				  			<img id="valley" src="../assets/gate/valley_b.png" alt="valley_b" class="img-responsive" width="100%" onclick="changeImageGate('valley')">
+				  		</div>
+				  		<div class="col-md-2 text-center no-padding">
+				  			<img id="waste" src="../assets/gate/waste_b.png" alt="waste_b" class="img-responsive" width="100%" onclick="changeImageGate('waste')">
+				  		</div>
+				  		<div class="col-md-2 text-center no-padding">
+				  			<img id="vault" src="../assets/gate/vault_b.png" alt="vault_b" class="img-responsive" width="100%" onclick="changeImageGate('vault')">
+				  		</div>
 					</div>
 
 					<p class="p-flat"><strong>Online Time</strong></p>
-					<div class="col-md-12">
-					  <div class="row">
-					  		<div class="col-md-3 text-center">
-					  				<img id="morning" src="../assets/weather/morning_b.png" alt="morning_b" class="img-responsive" width="100%" onclick="changeImage('morning')">
-					  		</div>
-					  		<div class="col-md-3 text-center">
-					  				<img id="siang" src="../assets/weather/siang_b.png" alt="siang_b" class="img-responsive" width="100%" onclick="changeImage('siang')">
-					  		</div>
-					  		<div class="col-md-3 text-center">
-					  				<img id="sore" src="../assets/weather/sore_b.png" alt="sore_b" class="img-responsive" width="100%" onclick="changeImage('sore')">
-					  		</div>
-					  		<div class="col-md-3 text-center">
-					  				<img id="malam" src="../assets/weather/malam_b.png" alt="malam_b" class="img-responsive" width="100%" onclick="changeImage('malam')">
-					  		</div>
-					  </div>
+					<div class="row" style="margin-bottom: 1rem;">
+				  		<div class="col-md-3 text-center">
+				  				<img id="morning" src="../assets/weather/morning_b.png" alt="morning_b" class="img-responsive" width="100%" onclick="changeImage('morning')">
+				  		</div>
+				  		<div class="col-md-3 text-center">
+				  				<img id="siang" src="../assets/weather/siang_b.png" alt="siang_b" class="img-responsive" width="100%" onclick="changeImage('siang')">
+				  		</div>
+				  		<div class="col-md-3 text-center">
+				  				<img id="sore" src="../assets/weather/sore_b.png" alt="sore_b" class="img-responsive" width="100%" onclick="changeImage('sore')">
+				  		</div>
+				  		<div class="col-md-3 text-center">
+				  				<img id="malam" src="../assets/weather/malam_b.png" alt="malam_b" class="img-responsive" width="100%" onclick="changeImage('malam')">
+				  		</div>
 					</div>
 
 					<p class="p-flat"><strong>I Speak</strong></p>
