--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -17,13 +17,13 @@
 		canvas {  width: 100% !important; height: auto !important;}
 	</style>
 
-<title>SKYRIANS FORM</title>
+<title>Skyrians Card</title>
 </head>
 <body>
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12 text-center" style="margin: auto;">
-			<h1>Skyrians Card Generator</h1>
+			<h1>Skyrians Member Card</h1>
 		</div>
 	</div>
 
