--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -23,7 +23,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12 text-center" style="margin: auto;">
-			<h1>Skyrians Member Card</h1>
+			<h1>Skyrians Community Card</h1>
 		</div>
 	</div>
 
