--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -221,7 +221,7 @@
 
         function canvasDownload() {
         	var link = document.createElement('a');
-			link.download = 'SkyriansCard.jpg';
+			link.download = 'SkyriansCard.png';
 			link.href = document.getElementById('sidcanvas').toDataURL()
 			link.click();   
 		}
