--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -19,7 +19,7 @@
 
 <title>SKYRIANS FORM</title>
 </head>
-<body>
+<body onload="loadImageFile();">
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12 text-center" style="margin: auto;">
@@ -36,7 +36,7 @@
 			    <div class="card-header">
 		      		<div class="row">
 		      			<div class="col-md-4" style="margin:auto;">
-				      		<label for="lblUpload"><img src="../assets/logo.png" alt="Post a Pic" class="img-responsive" width="100%"></label>
+				      		<label for="uploadImage"><img id="uploadPreview" src="../assets/logo.png" alt="Post a Pic" class="img-responsive" width="100%"></label>
 				      	</div>
 			      	</div>
 			    	<div class="row">
@@ -100,7 +100,7 @@
 			    	<div class="row">
 				    	<div class="col-md-2" style="margin:auto;">
 				    		<img src="../assets/logo.png" alt="footer" class="img-responsive" width="100%">
-				    		<input style="visibility: hidden;" type="file" id="lblUpload" name="file" accept="image/*">
+				    		<input style="visibility: hidden;" type="file" id="uploadImage" name="myPhoto" accept="image/*" onchange="loadImageFile();">
 				    	</div>
 				    </div>
 			    </div>
@@ -233,6 +233,21 @@
 			
 			document.getElementById('output').removeChild(canvas);
 		}
+
+
+		oFReader = new FileReader(), rFilter = /^(?:image\/bmp|image\/cis\-cod|image\/gif|image\/ief|image\/jpeg|image\/jpeg|image\/jpeg|image\/pipeg|image\/png|image\/svg\+xml|image\/tiff|image\/x\-cmu\-raster|image\/x\-cmx|image\/x\-icon|image\/x\-portable\-anymap|image\/x\-portable\-bitmap|image\/x\-portable\-graymap|image\/x\-portable\-pixmap|image\/x\-rgb|image\/x\-xbitmap|image\/x\-xpixmap|image\/x\-xwindowdump)$/i;
+
+		oFReader.onload = function (oFREvent) {
+		  document.getElementById("uploadPreview").src = oFREvent.target.result;
+		};
+
+		function loadImageFile() {
+		  if (document.getElementById("uploadImage").files.length === 0) { return; }
+		  var oFile = document.getElementById("uploadImage").files[0];
+		  if (!rFilter.test(oFile.type)) { alert("You must select a valid image file!"); return; }
+		  oFReader.readAsDataURL(oFile);
+		}
+
 		  
     </script>
 
