--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -53,21 +53,21 @@
 				      	</div>
 			      	</div>
 			    	<div class="row">
-			  			<h3 class="large text-center" contenteditable="true">Skyrians Name</h3>
-			        	<h5 class="text-center" contenteditable="true">Describe Your Self</h5>
+			  			<h2 class="large text-center" contenteditable="true">Skyrians Name</h3>
+			        	<h4 class="text-center" contenteditable="true">Describe Your Self</h5>
 			        </div>
 				</div>
 				<div class="card-body">
-					<p class="p-flat"><strong>More About Me</strong></p>
-					<p class="small" contenteditable="true">I am Skyrians</p>
+					<h5 class="p-flat">More About Me</h5>
+					<p contenteditable="true">I am Skyrians</p>
 
-					<p class="p-flat"><strong>Skyrians Birthday</strong></p>
-					<p class="small" contenteditable="true">At Hidden Forest A Dacade Ago</p>
+					<h5 class="p-flat">Skyrians Birthday</h5>
+					<p contenteditable="true">At Hidden Forest A Dacade Ago</p>
 
-					<p class="p-flat"><strong>I Speak</strong></p>
-					<p class="small" contenteditable="true">I Speak Skyrians Language</p>
+					<h5 class="p-flat">I Speak</h5>
+					<p contenteditable="true">I Speak Skyrians Language</p>
 
-					<p class="p-flat"><strong>Favorite Realm</strong></p>
+					<h5 class="p-flat">Favorite Realm</h5>
 					<div class="row" style="margin-bottom: 1rem;">
 				  		<div class="col-md-2 text-center no-padding">
 				  			<img id="isle" src="../assets/gate/isle_b.png" alt="isle_b" class="img-responsive sid-gate" width="100%" onclick="changeImageGate('isle')">
@@ -89,7 +89,7 @@
 				  		</div>
 					</div>
 
-					<p class="p-flat"><strong>Online Time</strong></p>
+					<h5 class="p-flat">Online Time</h5>
 					<div class="row text-center" style="margin-bottom: 1rem;">
 				  		<div class="col-md-2 text-center">
 				  			&nbsp;
