--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -235,9 +235,12 @@
         }
 
         function canvasDownload() {
+        	var resizedCanvas = document.getElementById('sidcanvas');
+        	resizedCanvas.width = "1000";
+
         	var link = document.createElement('a');
 			link.download = 'SkyriansCard.png';
-			link.href = document.getElementById('sidcanvas').toDataURL()
+			link.href = resizedCanvas.toDataURL()
 			link.click();   
 		}
 
