--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -175,7 +175,7 @@
 </div>
 <footer class="footer mt-auto py-3 bg-light">
   <div class="container text-center">
-    <span class="text-muted">© 2021 SKYI.ID SKYRIANS </span>
+    <span class="text-muted">© 2021 SKY.ID SKYRIANS </span>
   </div>
 </footer>
 	<!-- SCRIPT -->
