--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -79,8 +79,8 @@
 			    
 			    <div class="card-header">
 		      		<div class="row">
-		      			<div class="col-md-4" style="margin:auto;">
-				      		<label for="uploadImage"><img id="uploadPreview" src="../assets/logo.png" alt="Post a Pic" class="img-responsive" width="100%"></label>
+		      			<div class="col-md-12" style="margin:auto;" >
+				      		<label for="uploadImage"><img id="uploadPreview" src="../assets/moth_b.png" alt="Post a Pic" class="img-responsive" height="200px"></label>
 				      	</div>
 			      	</div>
 			    	<div class="row">
