--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -143,7 +143,7 @@
 			    <div class="card-footer text-center">
 			    	<div class="row">
 				    	<div class="col-md-2" style="margin:auto;">
-				    		<img src="../assets/logo.png" alt="footer" class="img-responsive" width="100%">
+				    		<img src="../assets/logo.png" alt="footer" class="img-responsive" width="55px">
 				    		<input style="visibility: hidden;" type="file" id="uploadImage" name="myPhoto" accept="image/*" onchange="loadImageFile();">
 				    	</div>
 				    </div>
