--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -4,6 +4,14 @@
 	<!-- Bootstrap core CSS -->
 	<link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
 	<style>
+
+		.sid-card{
+			background-image: url(../assets/cover_blur.png); 
+			background-size: cover; 
+  		background-position: center bottom;
+  		border-radius: 25px;
+		}
+
 		.p-flat
 		{
 			margin: 0 !important;
@@ -36,6 +44,34 @@
 			width: 100% !important; 
 			height: auto !important;
 		}
+
+		.image-cropper {
+		    position: relative;
+		    overflow: hidden;
+		    -webkit-border-radius: 50%;
+		    -moz-border-radius: 50%;
+		    -ms-border-radius: 50%;
+		    -o-border-radius: 50%;
+		    border-radius: 50%;  
+		}
+
+		.rounded{
+				width: 200px;
+				min-width: 200px;
+				min-height: 200px;
+		}
+
+		.sid-text {
+			padding-right: 2em;
+		  word-break: break-all;
+		}
+
+		.sid-emblem{
+			position: absolute;
+			margin-top: -12px;
+    	margin-left: -27.5px;
+		}
+
 	</style>
 
 <title>SKYRIANS CARD</title>
@@ -64,9 +100,9 @@
     <div class="container">
       <a href="https://skyrians.github.io/skyidform/" class="navbar-brand d-flex align-items-center">
         <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg">
-  			<image href="../assets/logo.png" height="20" width="20"/>
-		</svg>	
-		&nbsp;
+		  			<image href="../assets/logo.png" height="20" width="20"/>
+				</svg>	
+				&nbsp;
         <strong>Skyrians Community Card</strong>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
@@ -82,32 +118,84 @@
 <!-- card -->
 	<div class="row">
 		<div class="col-lg-7 col-md-10" style="margin: auto;">
-			<div class="Card bg-dark text-white text-center" id="photo" style="background-image: url(../assets/bg_project.jpg); background-size: cover;">
+			<div class="Card text-center sid-card" id="photo">
+			<!-- <div class="Card text-center sid-card bg-dark text-white" id="photo"> -->
 			    <br/>
-			    
-			    <div class="card-header">
+			    <div class="card-head">
+			    		<!-- <div class="col-md-12"  style="text-align: right; padding-right: 5em;">
+			    			<img src="../assets/logo.png" alt="badge" class="img-responsive" width="55px" style="position: absolute;"/>
+			    		</div> -->
 		      		<div class="row">
-		      			<div class="col-md-12" style="margin:auto;" >
-				      		<label for="uploadImage"><img id="uploadPreview" src="../assets/moth_b.png" alt="Post a Pic" class="img-responsive" height="200px"></label>
-				      	</div>
-			      	</div>
-			    	<div class="row">
-			  			<h2 class="large text-center" contenteditable="true" onclick="document.execCommand('selectAll',false,null)">[Skyrians Name]</h3>
-			        	<h4 class="text-center" contenteditable="true" onclick="document.execCommand('selectAll',false,null)">[Describe Skyrians]</h5>
-			        </div>
+		      			<div class="col-md-12">
+					    		<table style="height: 200px; width: 100%; text-align: left;">
+								  <tbody>
+								    <tr>
+								    	<td width="40%" style="padding-right: 1em;">
+								    		<div class="image-cropper" style="width: 200px; height: 200px; border: 0px solid grey; float: right;" >
+				      						<label for="uploadImage"><img id="uploadPreview" class="rounded" src="../assets/mod_hau.jpg" alt="Post a Pic"></label>
+				      					</div>
+				      				</td>
+								      <td class="align-middle sid-text">
+					  								<h2 contenteditable="true" onclick="document.execCommand('selectAll',false,null)">[Skyrians Name]</h2>
+					        					<h4 contenteditable="true" onclick="document.execCommand('selectAll',false,null)">[Describe Skyrians]</h4>
+					        				<table width="100%">
+					        				<tr>
+					        					<td width="20%"><p style="margin-bottom:0; display: block;">Birthday</p></td>
+					        					<td>:</td>
+								        		<td class="sid-text"><p style="margin-bottom:0;" contenteditable="true" onclick="document.execCommand('selectAll',false,null)">[At Hidden Forest A Dacade Ago]</p></td>
+													</tr>
+					        				<tr>
+					        					<td><p style="margin-bottom:0;" >Language</p></td>
+					        					<td>:</td>
+								        		<td class="sid-text"><p style="margin-bottom:0;" contenteditable="true" onclick="document.execCommand('selectAll',false,null)">[I Speak Skyrians Language]</p>
+					        					</td>
+													</tr>
+													</table>
+					        		</td>
+					        	</tr>
+					        </tbody>
+					      	</table>
+				        </div>
+			      </div>
 				</div>
-				<div class="card-body">
-					<h5 class="p-flat">More About Skyrians</h5>
-					<p contenteditable="true">[I am Skyrians]</p>
 
-					<h5 class="p-flat">Skyrians Birthday</h5>
-					<p contenteditable="true">[At Hidden Forest A Dacade Ago]</p>
 
-					<h5 class="p-flat">Skyrians Language</h5>
-					<p contenteditable="true">[I Speak Skyrians Language]</p>
+				<div class="col-md-12">
+    			<img src="../assets/logo_b.png" alt="badge" class="img-responsive sid-emblem" width="55px"/>
+    		</div>
+				<hr/>
+				<br>
+
+				<div class="card-head">
+					<h5 class="p-flat">More About Me</h5>
+					<div class="row" style="margin-bottom: 1rem;">
+						<div class="col-md-12" style="padding-right: 2em; padding-left: 2em;">
+							<p contenteditable="true">[Telling more about you]</p>
+						</div>
+					</div>
+
+					<h5 class="p-flat">Online Time</h5>
+					<div class="row" style="margin-bottom: 1rem; padding-top: 1rem;">
+				  		<div class="col-md-5 text-center" style="margin: auto;">
+				  			<div class="row">
+						  		<div class="col-md-3 text-center">
+						  				<img id="pagi" src="../assets/weather/pagi_b.png" alt="pagi_b" class="img-responsive sid-border" width="100%" onclick="changeImage('pagi')">
+						  		</div>
+						  		<div class="col-md-3 text-center">
+						  				<img id="siang" src="../assets/weather/siang_b.png" alt="siang_b" class="img-responsive sid-border" width="100%" onclick="changeImage('siang')">
+						  		</div>
+						  		<div class="col-md-3 text-center">
+						  				<img id="sore" src="../assets/weather/sore_b.png" alt="sore_b" class="img-responsive sid-border" width="100%" onclick="changeImage('sore')">
+						  		</div>
+						  		<div class="col-md-3 text-center">
+						  				<img id="malam" src="../assets/weather/malam_b.png" alt="malam_b" class="img-responsive sid-border" width="100%" onclick="changeImage('malam')">
+						  		</div>
+						  	</div>
+				  		</div>
+					</div>
 
 					<h5 class="p-flat">Favorite Realm</h5>
-					<div class="row" style="margin-bottom: 1rem;">
+					<div class="row">
 				  		<div class="col-md-2 text-center no-padding">
 				  			<img id="isle" src="../assets/gate/isle_b.png" alt="isle_b" class="img-responsive sid-gate" width="100%" onclick="changeImageGate('isle')">
 				  		</div>
@@ -127,41 +215,15 @@
 				  			<img id="vault" src="../assets/gate/vault_b.png" alt="vault_b" class="img-responsive sid-gate" width="100%" onclick="changeImageGate('vault')">
 				  		</div>
 					</div>
-
-					<h5 class="p-flat">Online Time</h5>
-					<div class="row text-center" style="margin-bottom: 1rem;">
-				  		<div class="col-md-2 text-center">
-				  			&nbsp;
-				  		</div>
-				  		<div class="col-md-2 text-center">
-				  				<img id="morning" src="../assets/weather/morning_b.png" alt="morning_b" class="img-responsive sid-border" width="100%" onclick="changeImage('morning')">
-				  		</div>
-				  		<div class="col-md-2 text-center">
-				  				<img id="siang" src="../assets/weather/siang_b.png" alt="siang_b" class="img-responsive sid-border" width="100%" onclick="changeImage('siang')">
-				  		</div>
-				  		<div class="col-md-2 text-center">
-				  				<img id="sore" src="../assets/weather/sore_b.png" alt="sore_b" class="img-responsive sid-border" width="100%" onclick="changeImage('sore')">
-				  		</div>
-				  		<div class="col-md-2 text-center">
-				  				<img id="malam" src="../assets/weather/malam_b.png" alt="malam_b" class="img-responsive sid-border" width="100%" onclick="changeImage('malam')">
-				  		</div>
-					</div>
-
 				</div>
-			    <div class="card-footer text-center">
-			    	<div class="row">
-				    	<div class="col-md-2" style="margin:auto;">
-				    		<img src="../assets/logo.png" alt="footer" class="img-responsive" width="55px">
-				    		<input style="visibility: hidden;" type="file" id="uploadImage" name="myPhoto" accept="image/*" onchange="loadImageFile();">
-				    	</div>
-				    </div>
-			    </div>
-		    </div>
-	    </div>
+
+		  </div>
+		  <input style="visibility: hidden;" type="file" id="uploadImage" name="myPhoto" accept="image/*" onchange="loadImageFile();">
+	  </div>
 	</div>
 
 	<br/>
-	
+
 	<div class="row">
 		<div class="col-lg-5 col-md-8 text-center" style="margin: auto;">
 			<div class="d-grid gap-2 mx-auto">
