--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -9,7 +9,7 @@
 			background-image: url(../assets/cover_blur.png); 
 			background-size: cover; 
   		background-position: center bottom;
-  		border-radius: 25px;
+  		/*border-radius: 25px;*/
 		}
 
 		.p-flat
