--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -56,9 +56,9 @@
 		}
 
 		.rounded{
-				width: 200px;
-				min-width: 200px;
-				min-height: 200px;
+			  width: 200px; 
+			  height: 200px; 
+			  object-fit: cover;
 		}
 
 		.sid-text {
@@ -132,7 +132,7 @@
 								    <tr>
 								    	<td width="40%" style="padding-right: 1em;">
 								    		<div class="image-cropper" style="width: 200px; height: 200px; border: 0px solid grey; float: right;" >
-				      						<label for="uploadImage"><img id="uploadPreview" class="rounded" src="../assets/mod_hau.jpg" alt="Post a Pic"></label>
+				      						<label for="uploadImage"><img id="uploadPreview" class="img-fluid rounded" src="../assets/mod_hau.jpg" alt="Post a Pic"></label>
 				      					</div>
 				      				</td>
 								      <td class="align-middle sid-text">
