--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -161,9 +161,8 @@
 
 
 				<div class="col-md-12">
-    			<img src="../assets/logo_b.png" alt="badge" class="img-responsive sid-emblem" width="55px"/>
+    			<img src="../assets/logo_b.png" alt="badge" class="img-responsive" width="55px"/>
     		</div>
-				<hr/>
 				<br>
 
 				<div class="card-head">
