--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<!-- Bootstrap core CSS -->
-	<link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
 	<style>
 
 		.sid-card{
-			background-image: url(../assets/cover_blur.png); 
+			background-image: url(assets/cover_blur.png); 
 			background-size: cover; 
   		background-position: center bottom;
   		/*border-radius: 25px;*/
@@ -87,7 +87,7 @@
 		.sid-ppic{
 			width:200px;
 		  height:200px;
-		  background-image: url(../assets/mod_hau.jpg);
+		  background-image: url(/assets/mod_hau.jpg);
 		  background-size:cover;
 		  background-position:center;
 		}
@@ -120,7 +120,7 @@
     <div class="container">
       <a href="https://skyrians.github.io/skyidform/" class="navbar-brand d-flex align-items-center">
         <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg">
-		  			<image href="../assets/logo.png" height="20" width="20"/>
+		  			<image href="assets/logo.png" height="20" width="20"/>
 				</svg>	
 				&nbsp;
         <strong>Skyrians Community Card</strong>
@@ -143,7 +143,7 @@
 			    <br/>
 			    <div class="card-head">
 			    		<!-- <div class="col-md-12"  style="text-align: right; padding-right: 5em;">
-			    			<img src="../assets/logo.png" alt="badge" class="img-responsive" width="55px" style="position: absolute;"/>
+			    			<img src=/assets/logo.png" alt="badge" class="img-responsive" width="55px" style="position: absolute;"/>
 			    		</div> -->
 		      		<div class="row">
 		      			<div class="col-md-12">
@@ -152,7 +152,7 @@
 								    <tr>
 								    	<td width="40%" style="padding-right: 1em;">
 								    		<div class="image-cropper" >
-				      						<label for="uploadImage"><img id="uploadPreview" class="img-responsive rounded-lan" src="../assets/mod_hau.jpg" alt="Post a Pic"></label> 
+				      						<label for="uploadImage"><img id="uploadPreview" class="img-responsive rounded-lan" src="assets/mod_hau.jpg" alt="Post a Pic"></label> 
 				      						<!-- <div id="uploadPreview" class="sid-ppic"></div> -->
 				      					</div>
 				      				</td>
@@ -182,7 +182,7 @@
 
 
 				<div class="col-md-12">
-    			<img src="../assets/logo_b.png" alt="badge" class="img-responsive" width="55px"/>
+    			<img src="assets/logo_b.png" alt="badge" class="img-responsive" width="55px"/>
     		</div>
 				<br>
 
@@ -199,16 +199,16 @@
 				  		<div class="col-md-5 text-center" style="margin: auto;">
 				  			<div class="row">
 						  		<div class="col-md-3 text-center">
-						  				<img id="pagi" src="../assets/weather/pagi_b.png" alt="pagi_b" class="img-responsive sid-border" width="100%" onclick="changeImage('pagi')">
+						  				<img id="pagi" src="assets/weather/pagi_b.png" alt="pagi_b" class="img-responsive sid-border" width="100%" onclick="changeImage('pagi')">
 						  		</div>
 						  		<div class="col-md-3 text-center">
-						  				<img id="siang" src="../assets/weather/siang_b.png" alt="siang_b" class="img-responsive sid-border" width="100%" onclick="changeImage('siang')">
+						  				<img id="siang" src="assets/weather/siang_b.png" alt="siang_b" class="img-responsive sid-border" width="100%" onclick="changeImage('siang')">
 						  		</div>
 						  		<div class="col-md-3 text-center">
-						  				<img id="sore" src="../assets/weather/sore_b.png" alt="sore_b" class="img-responsive sid-border" width="100%" onclick="changeImage('sore')">
+						  				<img id="sore" src="assets/weather/sore_b.png" alt="sore_b" class="img-responsive sid-border" width="100%" onclick="changeImage('sore')">
 						  		</div>
 						  		<div class="col-md-3 text-center">
-						  				<img id="malam" src="../assets/weather/malam_b.png" alt="malam_b" class="img-responsive sid-border" width="100%" onclick="changeImage('malam')">
+						  				<img id="malam" src="assets/weather/malam_b.png" alt="malam_b" class="img-responsive sid-border" width="100%" onclick="changeImage('malam')">
 						  		</div>
 						  	</div>
 				  		</div>
@@ -217,22 +217,22 @@
 					<h5 class="p-flat">Favorite Realm</h5>
 					<div class="row">
 				  		<div class="col-md-2 text-center no-padding">
-				  			<img id="isle" src="../assets/gate/isle_b.png" alt="isle_b" class="img-responsive sid-gate" width="100%" onclick="changeImageGate('isle')">
+				  			<img id="isle" src="assets/gate/isle_b.png" alt="isle_b" class="img-responsive sid-gate" width="100%" onclick="changeImageGate('isle')">
 				  		</div>
 				  		<div class="col-md-2 text-center no-padding">
-				  			<img id="prairie" src="../assets/gate/prairie_b.png" alt="prairie_b" class="img-responsive sid-gate" width="100%" onclick="changeImageGate('prairie')">
+				  			<img id="prairie" src="assets/gate/prairie_b.png" alt="prairie_b" class="img-responsive sid-gate" width="100%" onclick="changeImageGate('prairie')">
 				  		</div>
 				  		<div class="col-md-2 text-center no-padding">
-				  			<img id="forest" src="../assets/gate/forest_b.png" alt="forest_b" class="img-responsive sid-gate" width="100%" onclick="changeImageGate('forest')">
+				  			<img id="forest" src="assets/gate/forest_b.png" alt="forest_b" class="img-responsive sid-gate" width="100%" onclick="changeImageGate('forest')">
 				  		</div>
 				  		<div class="col-md-2 text-center no-padding">
-				  			<img id="valley" src="../assets/gate/valley_b.png" alt="valley_b" class="img-responsive sid-gate" width="100%" onclick="changeImageGate('valley')">
+				  			<img id="valley" src="assets/gate/valley_b.png" alt="valley_b" class="img-responsive sid-gate" width="100%" onclick="changeImageGate('valley')">
 				  		</div>
 				  		<div class="col-md-2 text-center no-padding">
-				  			<img id="waste" src="../assets/gate/waste_b.png" alt="waste_b" class="img-responsive sid-gate" width="100%" onclick="changeImageGate('waste')">
+				  			<img id="waste" src="assets/gate/waste_b.png" alt="waste_b" class="img-responsive sid-gate" width="100%" onclick="changeImageGate('waste')">
 				  		</div>
 				  		<div class="col-md-2 text-center no-padding">
-				  			<img id="vault" src="../assets/gate/vault_b.png" alt="vault_b" class="img-responsive sid-gate" width="100%" onclick="changeImageGate('vault')">
+				  			<img id="vault" src="assets/gate/vault_b.png" alt="vault_b" class="img-responsive sid-gate" width="100%" onclick="changeImageGate('vault')">
 				  		</div>
 					</div>
 				</div>
@@ -294,9 +294,15 @@
 </div>
 </main>
 
+<div class="row">
+		<div class="col-md-12 text-center" style="margin: auto;">
+			<p class="text-secondary">Skyrians Community Card are for internal use inside the SKY.ID SKYRIANS Community only.<br/>All assets of Sky: Children of The Light are owned by ThatGameCompany.</p>
+		</div>
+</div>
+
 <footer class="footer mt-auto py-3 bg-light">
   <div class="container text-center">
-    <span class="text-muted">© 2021 SKY.ID SKYRIANS </span>
+    <span class="text-muted">© 2021 - SKY.ID SKYRIANS </span>
   </div>
 </footer>
 	<!-- SCRIPT -->
@@ -304,7 +310,7 @@
 
 	<script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
 
-    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
 	
 	<script src="https://cdn.jsdelivr.net/npm/canvas2image@1.0.5/canvas2image.min.js"></script>
 
@@ -320,12 +326,12 @@
         	if (document.getElementById(x).alt == x+"_b") 
 	        {
 	            document.getElementById(x).alt = x
-	            document.getElementById(x).src = "../assets/weather/" + x + ".png";
+	            document.getElementById(x).src = "assets/weather/" + x + ".png";
 	        }
 	        else 
 	        {
 	            document.getElementById(x).alt = x+"_b"
-	            document.getElementById(x).src = "../assets/weather/" + x + "_b.png";
+	            document.getElementById(x).src = "assets/weather/" + x + "_b.png";
 	        }
 	    }
 
@@ -334,12 +340,12 @@
         	if (document.getElementById(x).alt == x+"_b") 
 	        {
 	            document.getElementById(x).alt = x
-	            document.getElementById(x).src = "../assets/gate/" + x + ".png";
+	            document.getElementById(x).src = "assets/gate/" + x + ".png";
 	        }
 	        else 
 	        {
 	            document.getElementById(x).alt = x+"_b"
-	            document.getElementById(x).src = "../assets/gate/" + x + "_b.png";
+	            document.getElementById(x).src = "assets/gate/" + x + "_b.png";
 	        }
 	    }
 
