--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -94,6 +94,7 @@
 
 	</style>
 
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <title>SKYRIANS CARD</title>
 </head>
 <body onload="loadImageFile();">
