--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -95,6 +95,7 @@
 	</style>
 
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<link rel=“icon” href="favicon.ico" type=“image/x-icon”>
 <title>SKYRIANS CARD</title>
 </head>
 <body onload="loadImageFile();">
