--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -111,9 +111,9 @@
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">Find Us</h4>
           <ul class="list-unstyled">
-            <li><a href="https://www.instagram.com/skyidskyrians/" class="text-white">Instagram</a></li>
-            <li><a href="https://discord.gg/GYxsWtxG9p" class="text-white">Discord</a></li>
-            <li><a href="https://linktr.ee/skyidskyrians" class="text-white">Find Us More</a></li>
+            <li><a target=”_blank” href="https://www.instagram.com/skyidskyrians/" class="text-white">Instagram</a></li>
+            <li><a target=”_blank” href="https://discord.gg/GYxsWtxG9p" class="text-white">Discord</a></li>
+            <li><a target=”_blank” href="https://linktr.ee/skyidskyrians" class="text-white">Find Us More</a></li>
           </ul>
         </div>
       </div>
