--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -308,6 +308,20 @@
 			<p class="text-secondary">Skyrians Community Card are for internal use inside the SKY.ID SKYRIANS Community only.<br/>All assets of Sky: Children of The Light are owned by ThatGameCompany.</p>
 		</div>
 </div>
+<div class="row" style="visibility:hidden">
+	<div class="col-md-3 text-center">
+			<img id="pagi" src="assets/weather/pagi.png" alt="pagi" class="img-responsive sid-border" height="10px">
+	</div>
+	<div class="col-md-3 text-center">
+			<img id="siang" src="assets/weather/siang.png" alt="siang" class="img-responsive sid-border" height="10px">
+	</div>
+	<div class="col-md-3 text-center">
+			<img id="sore" src="assets/weather/sore.png" alt="sore" class="img-responsive sid-border" height="10px">
+	</div>
+	<div class="col-md-3 text-center">
+			<img id="malam" src="assets/weather/malam.png" alt="malam" class="img-responsive sid-border" height="10px">
+	</div>
+</div>
 
 <footer class="footer mt-auto py-3 bg-light">
   <div class="container text-center">
