--- a/skyidform/index.html
+++ b/skyidform/index.html
@@ -275,8 +275,6 @@
 	    	</div>
 		</div>
 	</div>
-	<br/>
-	<br/>
 	<!-- Modal -->
 	<div class="modal fade" id="canvasModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 	  <div class="modal-dialog">
@@ -302,7 +300,16 @@
 	</div>
 </div>
 </main>
-
+<div class="row" style="visibility:hidden">
+		<div class="col-md-12 text-center no-padding">
+			<img id="isle" src="assets/gate/isle.png" alt="isle" class="img-responsive" height="10px">
+			<img id="prairie" src="assets/gate/prairie.png" alt="prairie" class="img-responsive" height="10px">
+			<img id="forest" src="assets/gate/forest.png" alt="forest" class="img-responsive" height="10px">
+			<img id="valley" src="assets/gate/valley.png" alt="valley" class="img-responsive" height="10px">
+			<img id="waste" src="assets/gate/waste.png" alt="waste" class="img-responsive" height="10px">
+			<img id="vault" src="assets/gate/vault.png" alt="vault" class="img-responsive" height="10px">
+		</div>
+</div>
 <div class="row">
 		<div class="col-md-12 text-center" style="margin: auto;">
 			<p class="text-secondary">Skyrians Community Card are for internal use inside the SKY.ID SKYRIANS Community only.<br/>All assets of Sky: Children of The Light are owned by ThatGameCompany.</p>
@@ -310,16 +317,10 @@
 </div>
 <div class="row" style="visibility:hidden">
 	<div class="col-md-3 text-center">
-			<img id="pagi" src="assets/weather/pagi.png" alt="pagi" class="img-responsive sid-border" height="10px">
-	</div>
-	<div class="col-md-3 text-center">
-			<img id="siang" src="assets/weather/siang.png" alt="siang" class="img-responsive sid-border" height="10px">
-	</div>
-	<div class="col-md-3 text-center">
-			<img id="sore" src="assets/weather/sore.png" alt="sore" class="img-responsive sid-border" height="10px">
-	</div>
-	<div class="col-md-3 text-center">
-			<img id="malam" src="assets/weather/malam.png" alt="malam" class="img-responsive sid-border" height="10px">
+			<img id="pagi" src="assets/weather/pagi.png" alt="pagi" class="img-responsive" height="10px">
+			<img id="siang" src="assets/weather/siang.png" alt="siang" class="img-responsive" height="10px">
+			<img id="sore" src="assets/weather/sore.png" alt="sore" class="img-responsive" height="10px">
+			<img id="malam" src="assets/weather/malam.png" alt="malam" class="img-responsive" height="10px">
 	</div>
 </div>
 
